# deep-search-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
benchmark/: README.md  __init__.py  __main__.py  config.py  debug_middleware.py  judge.py  metrics.py  questions.py  report.py  runner.py
docs/: index.md  installation.md  quickstart.md
docs/guide/: architecture.md  extending.md
docs/reference/: api.md
examples/: debug_middleware.py  deep_search.py
src/deep_search_agent/: __init__.py  factory.py  metrics.py  middleware.py  prompts.py  subagents.py
src/deep_search_agent/tools/: __init__.py  fetch.py  search.py
tests/: conftest.py  test_factory.py  test_fetch_tool.py  test_metrics.py  test_middleware.py  test_search_tool.py
tests/e2e/: conftest.py  test_browser_smoke.py  test_js_render_fallback.py
tests/e2e/test_data/: js_only_page.html  sample_page.html
