[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-search-agent"
dynamic = ["version"]
description = "Deep web search agent library built on LangChain deepagents: orchestrator + specialized subagents + iterative rubric-graded refinement."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Hawk", email = "francesco.giurlanda@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["langchain", "deepagents", "agent", "deep-search", "search", "llm", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "deepagents>=0.6.5",
    "httpx>=0.28.1",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "pypdf>=6.14.2",
    "trafilatura>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/giurlanda/deep-search-agent"
Documentation = "https://giurlanda.github.io/deep-search-agent/"
Repository = "https://github.com/giurlanda/deep-search-agent"
Issues = "https://github.com/giurlanda/deep-search-agent/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# e2e tests are opt-in (run with: pytest -m e2e). Playwright's sync API keeps an
# asyncio loop running on the main thread for the whole session, which breaks
# unit tests that call asyncio.run() in the same process.
addopts = "-m 'not e2e'"
markers = [
    "e2e: browser-based end-to-end tests (require Playwright browsers; run with -m e2e)",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-playwright>=0.8.0",
    "ruff>=0.15.21",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
# Extra for the opt-in performance benchmark (benchmark/). Provides the
# OpenAI-compatible client used to reach OpenRouter for both the inference
# model and the LLM-as-a-judge.
benchmark = [
    "langchain-openai>=1.0,<2.0",
]

[tool.hatch.version]
path = "src/deep_search_agent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_search_agent"]
